# burn_gaussian_splatting

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
